# readItNow-rc

./: .devenv.flake.nix  .gitignore  Cargo.toml  LICENSE  README.md  REAMDME.md  devenv.nix  devenv.yaml  flake.nix  result  todos.md
docs/: markdown-processor-implementation.md  pulldown-cmark-api.md
src/: app.rs  config.rs  keybindings.rs  kitty.rs  lib.rs  main.rs  markdown_processor.rs  models.rs  ui.rs  vault.rs
src/markdown_processor/: config.rs  mod.rs  processor.rs  regex_patterns.rs  text_utils.rs
tests/: integration_test.rs  markdown_processor_test.rs  models_test.rs
