[package]
name = "readitnow"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.26.0"
crossterm = { version = "0.27.0", features = ["event-stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1.10.4"



image = "0.25.1"
base64 = "0.22.1"



reqwest = { version = "0.12.4", features = ["blocking", "json"] }



open = "5.0.0"




[dev-dependencies]
readitnow = { path = "." }


